This is the Changelogs for GregTech6-Unofficial
6.13.07: (Not released yet).
Nothing

6.13.06: (Not released yet).
Nothing

6.13.05: (Not released yet).
Nothing

6.13.04: (Not released yet).
[CHANGED]Particle Collider now needs minimum 20 particle in the input slot to operate.
[CHANGED]Some recipes of the Particle Collider to adjust the previous change.
[ADDED]
Multiblock Ionizer.
3x3x3 Hollow of Electrical Proof Machine Casing, with the Main at the center of any bottom side.
[ADDED]
Electrical Proof Machine Casing
[ADDED]
Recipes of ionized gas now are added.

6.13.03: 
[FIXED]molten metal in tank system are forbidden now.
[FIXED]Titanium Niobium Carbide can not made in crucible.
[FIXED]Tooltips of large heat exchanger still like before.
[FIXED]Distillation Tower now output fluid in the correct order
[FIXED]Gearboxes sometimes breaking/overloading on World Load.
[FIXED]A Rare NEI Recipe List Crash. (Concurrent Modification Exception when clicking Progress Bar)
[FIXED]Bedrock Ores did not generate Indicator Flowers and Indicator Rocks in Twilight Forest due to its Terrains normal Height of Y31 instead of Y63.
[FIXED]The Code that made Plates, Ingots and Rocks placeable did not check if the Stack was already a Block, meaning it just replaced things like Greatwood Planks or Silverwood Planks with the Stack-of-Plates Block.
[FIXED]Titanium Niobium Carbide Gas and Engine Turbine Main Housing recipes use Dense Titanium Niobium Carbide Wall 
[CHANGED]Temperature of plasma set to 4000K
[CHANGED]Implosion Compressor now accept EU to do process.
[CHANGED]The Matter Replicators are working 4 times than before.
[CHANGED]For MultyBlock Heat Exchanger now need Thermomechanical Block.
[CHANGED]Now Distillation Tower need 3x3x12 Distillation Tower Parts to build.
[CHANGED]Fusion now accept energy LU to do process.And it dont output energy now.Some of its recipes now output plasma.