@@ -1259,7 +1259,9 @@ public class MT {
 	Naphtha                 = create        (27003, "Naphtha"               , SET_FLUID             , 255, 255, 102, 255).put(LIQUID, EXPLOSIVE, FLAMMABLE)                                                                                                                                                                                                                                                                         .heat( 100,  400).aspects(TC.MORTUUS, 1, TC.POTENTIA, 1),
     H_Ion                   = create        (27004, "Ionized Hydrogen", SET_FLUID, 255, 255, 102, 255).put(PLASMA).heat(1, 12),
     He_Ion                  = create        (27005, "Ionized Helium", SET_FLUID, 255, 255, 102, 255).put(PLASMA).heat(2, 8),
-	NqO2U238Am              = oredustdcmp   (27006, "Naquadah Mixture"       , SET_METALLIC          , 55,  60, 50, 255).put(MELTING, MOLTEN, INGOTS)                                                                                                                   .uumMcfg( 1, Nq             , 1*U, Nq_528, 1*U, O                , 2*U, U_238          ,2*U, Am, 1*U)                                                                                                  .qual(0, 1.0, 16, 2);
+	NqU238Am                = oredustdcmp   (27006, "Naquadah Mixture"       , SET_METALLIC          , 55,  60, 50, 255).put(MELTING, MOLTEN, INGOTS)                                                                                                                   .uumMcfg( 1, Nq             , 1*U, Nq_528, 1*U,  U_238          ,2*U, Am, 1*U)                                                                                                  .qual(0, 1.0, 16, 20),
+	UCl4                    = lqudacidcent  (27007, "Uranium Chloride"            , SET_FLUID        ,102, 204,  0, 255).put(LIQUID)                                                                                                                                    .uumMcfg( 0, U_238          , 1*U, Cl              , 4*U)                                                                                                  .heat( 200,  400),
+	NqAm                    = lqudacidcent  (27008, "High Naquadah Chloride"            , SET_FLUID  ,  0,  26, 51, 255).put(LIQUID)                                                                                                                                    .uumMcfg( 0, Nq             , 1*U, Am              , 1*U, Nq_528, 1*U)                                                                                                  .heat( 200,  400);
 
     static {
 		H2O.setSolidifying(Ice, U);
