@@ -9,6 +9,7 @@ Nothing
 Nothing
 
 6.13.04: (Not released yet).
+[CHANGED]Naquadah worldgen now just worldgen exist in Naquadah Mixture Ore.
 [CHANGED]Particle Collider now needs minimum 20 particle in the input slot to operate.
 [CHANGED]Some recipes of the Particle Collider to adjust the previous change.
 [ADDED]
